renamed dogstatsd -> stsstatsd

--- a/win32/status.html
+++ b/win32/status.html
@@ -265,7 +265,7 @@
 
         </div>
 
-        <h4 id="by">Powered by <a href="http://www.datadoghq.com/">Datadog</a></h4>
+        <h4 id="by">Powered by <a href="http://www.stackstate.com/">StackState</a></h4>
       </div><!-- #content -->
 
     </div><!-- #container -->
